--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  firebase_core: ^3.9.0
+  firebase_auth: ^5.3.4
+  google_fonts: ^6.2.1
+  hugeicons: ^0.0.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  cloud_firestore: ^5.6.0
 
 dev_dependencies:
   flutter_test:
