--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,13 +32,16 @@ dependencies:
     sdk: flutter
   firebase_core: ^3.9.0
   firebase_auth: ^5.3.4
+  cloud_firestore: ^5.6.0
+  google_sign_in: ^6.1.0
   google_fonts: ^6.2.1
   hugeicons: ^0.0.7
+  flutter_svg: ^2.0.4
+  flutter_icon_snackbar: ^1.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  cloud_firestore: ^5.6.0
 
 dev_dependencies:
   flutter_test:
@@ -63,9 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
